# esp32-lighting

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
common/: Cargo.toml
common/src/: led.rs
common/src/led/: interface.rs  pixel.rs
common/src/led/interface/: led_array.rs  led_display.rs  led_display_write.rs  led_rectangular_array.rs
common/src/led/interface/led_rectangular_array/: tests.rs
esp32-lighting/: Cargo.toml  build.rs
esp32-lighting/src/: lib.rs  main.rs
src/: html.rs  lib.rs  main.rs  wifi.rs
src/led/: interface.rs
src/led/interface/: led_array.rs  led_display.rs  led_rectangular_array.rs  pixel.rs
web/: Cargo.toml
web/examples/: dev.rs
web/src/: pages.rs
