[package]
name = "esp32-lighting"
version = "0.1.0"
authors = ["Reuben <reubendrummond@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "esp32-lighting"
harness = false         # do not use the built in cargo test harness -> resolve rust-analyzer errors


[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
common = { path = "../common" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
heapless = "0.8.0"
futures = "0.3.30"
anyhow = "1.0.86"
maud = "0.26.0"
url = "2.5.0"
http = "1.1.0"
ws2812-esp32-rmt-driver = { version = "0.8.0", features = ["smart-leds-trait"] }
smart-leds-trait = "0.3.0"
rgb = "0.8.37"

[build-dependencies]
dotenv-build = "0.1.1"
embuild = "0.31.3"
